# Metapp

./: .gitmodules  CMakeLists.txt  build.sh  configure.sh  main.cpp  readme.MD  run.sh
resources/: hello_world.yaml
src/: db_handler.cpp  db_handler.h  main.cpp  parse_todo.cpp  parse_todo.h
